--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=spring-demo-jwt
+
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-sign.key=secret_key
+jwt.privateKey=secret_key
+jwt.timeToLive=30
