Añadir funcionalidad para refrescar el token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.application.name=spring-demo-jwt
 spring.jackson.serialization.write_dates_as_timestamps=false
 
 jwt.privateKey=secret_key
-jwt.timeToLive=30
+jwt.accessTokenTimeToLiveSeconds=60
+jwt.refreshTokenTimeToLiveSeconds=86400
+jwt.tokenType=Bearer
